--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -13,3 +13,15 @@
     text-decoration:none;
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+.conteiner{
+    width:1024px;
+    margin:30px auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.row{
+    display: flex;
+    flex-direction: row;
+}
