--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -2,12 +2,14 @@
 /*Components*/
 @import'./header.css';
 @import'./buttons.css';
+@import'./main.css';
 /*Reset css*/
 *{
     margin: 0;
     padding:0;
     border: 0;
     font-size: 100%;
+    font-weight: 300;
     font:inherit;
     vertical-align: baseline;
     text-decoration:none;
