--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -1,33 +1,34 @@
 .sobre-web-design{
-align-items: center;
 justify-content: space-between;
+align-items: center;
 }
+
 .sobre-web-design article{
     width: 250px;
 }
+
 .sobre-web-design article h1{
-    font-size: 70px;
-    line-height: 90%;
-    font-weight: 400;
-    color:#333366
-}
-.sobre-web-design article h2,
-.sobre-web-design article p{
-    color: #3399cc;
+font-size: 70px;
+line-height: 90%;
+font-weight: 400;
+color:#333366;
 }
 
 .sobre-web-design article h2{
-    font-size:30px;
+    font-size:25px;
     text-transform: uppercase;
     letter-spacing: 2px;
     line-height: 200%;
-    
+    color:#3399cc;
+
 }
+
 .sobre-web-design article p{
-    
-    margin: 10px 0 40px;
+    color: #3399cc;
+    margin:10px 0 30px 0;
 }
+
 .sobre-web-design figcaption img{
-    width: 700px;
-    
+    width: 100%;
+    margin: 30px 0 0 0;
 }
