--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,29 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400&display=swap');
-/*Components*/
-@import'./header.css';
-@import'./buttons.css';
-@import'./main.css';
-/*Reset css*/
-*{
-    margin: 0;
-    padding:0;
-    border: 0;
-    font-size: 100%;
-    font-weight: 300;
-    font:inherit;
-    vertical-align: baseline;
-    text-decoration:none;
-    font-family: 'Source Sans Pro', sans-serif;
-}
+@import './bootstrap.css';
+@import'./button.css';
+@import './header.css';
+@import './main.css';
+@import './footer.css';
+@import './responsive-background.css';
+@import './responsive-elemants.css';
 
-.conteiner{
-    width:1024px;
-    margin:30px auto;
-    display: flex;
-    flex-direction: column;
-}
-
-.row{
-    display: flex;
-    flex-direction: row;
-}
